force-app/main/default/objects/Finance_Request__c/Finance_Request__c.object-meta.xml
<CustomObject>
    <description
  >Centralized request object used by Sales Administrators to submit finance-related requests—including reallocations, invoice cancellations, refunds, and bucket fund requests—for review, approval, and processing.</description>
    <label>Finance Request</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Finance Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>