force-app/main/default/objects/Finance_Request__c/fields/Date_Reallocation_Completed_Opp__c.field-meta.xml
<CustomField>
    <fullName>Date_Reallocation_Completed_Opp__c</fullName>
    <label>Date Reallocation Completed (Opp)</label>
    <type>Date</type>
</CustomField>