force-app/main/default/objects/Finance_Request__c/fields/Finance_Request_Notes__c.field-meta.xml
<CustomField>
    <fullName>Finance_Request_Notes__c</fullName>
    <label>Finance Request Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>