force-app/main/default/objects/Finance_Request__c/fields/Finance_Request_Report__c.field-meta.xml
<CustomField>
    <fullName>Finance_Request_Report__c</fullName>
    <formula
  >IF( ISPICKVAL(Status__c , &quot;Completed&quot;) , HYPERLINK(&quot;/lightning/r/Report/00OJw00000ErV41MAF/view?fv0=&quot;&amp;Name&amp;&quot;&amp;fv1=&quot;&amp;Schedule_Id__c, &quot;View Details&quot;), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finance Request Report</label>
    <type>Text</type>
</CustomField>