force-app/main/default/objects/Finance_Request__c/fields/Finance_Status__c.field-meta.xml
<CustomField>
    <fullName>Finance_Status__c</fullName>
    <label>Finance Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>