force-app/main/default/objects/Finance_Request__c/fields/New_Product_GL__c.field-meta.xml
<CustomField>
    <fullName>New_Product_GL__c</fullName>
    <formula
  >Split_Opportunity_Product__r.PricebookEntry.Product2.c2g__CODASalesRevenueAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Product GL</label>
    <type>Text</type>
</CustomField>