force-app/main/default/objects/Finance_Request__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel
  >Finance Requests (Opportunity Product)</relationshipLabel>
    <relationshipName>Finance_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>