force-app/main/default/objects/Finance_Request__c/fields/Original_Date_Billed__c.field-meta.xml
<CustomField>
    <fullName>Original_Date_Billed__c</fullName>
    <label>Original Date Billed</label>
    <type>Date</type>
</CustomField>