force-app/main/default/objects/Finance_Request__c/fields/Original_Product_GL__c.field-meta.xml
<CustomField>
    <fullName>Original_Product_GL__c</fullName>
    <formula
  >Opportunity_Product__r.PricebookEntry.Product2.c2g__CODASalesRevenueAccount__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Product GL</label>
    <type>Text</type>
</CustomField>