force-app/main/default/objects/Finance_Request__c/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <formula
  >HYPERLINK(&quot;/lightning/r/&quot; &amp; Schedule_Id__c &amp; &quot;/view&quot;, &quot;View Schedule&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule</label>
    <type>Text</type>
</CustomField>