force-app/main/default/objects/Finance_Request__c/fields/Schedule_Id__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Id__c</fullName>
    <label>Schedule Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>