force-app/main/default/objects/Finance_Request__c/fields/Split_Account__c.field-meta.xml
<CustomField>
    <fullName>Split_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Finance Requests (Split Account)</relationshipLabel>
    <relationshipName>Finance_Requests_Split</relationshipName>
    <type>Lookup</type>
</CustomField>