force-app/main/default/objects/Finance_Request__c/fields/Split_Internal_Action__c.field-meta.xml
<CustomField>
    <fullName>Split_Internal_Action__c</fullName>
    <label>Split Internal Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Make Good</fullName>
            </value>
            <value>
                <fullName
        >Credit on the Books - Client to Decide on Product</fullName>
                <label>Credit: Client to Decide on Product</label>
            </value>
            <value>
                <fullName>Credit on the Books - Invoice Open</fullName>
                <label>Credit: Invoice Open</label>
            </value>
            <value>
                <fullName>Misc - Waiting on New Product Creation</fullName>
            </value>
            <value>
                <fullName>Product - TBD Print</fullName>
            </value>
            <value>
                <fullName>Service Value</fullName>
            </value>
            <value>
                <fullName>Value Add - Client to Decide on Product</fullName>
            </value>
            <value>
                <fullName>Credit Used in Full</fullName>
            </value>
            <value>
                <fullName>Canceled Invoice (cannot delete)</fullName>
            </value>
            <value>
                <fullName>Not a Credit</fullName>
            </value>
            <value>
                <fullName>Written Off to Other Income</fullName>
            </value>
            <value>
                <fullName>Credit Applied to Q4 2024 Delivery Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>