force-app/main/default/objects/Finance_Request__c/fields/Split_Internal_Note__c.field-meta.xml
<CustomField>
    <fullName>Split_Internal_Note__c</fullName>
    <label>Split Internal Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>