force-app/main/default/objects/Finance_Request__c/fields/Split_Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Split_Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Finance Requests (Split Opp Product)</relationshipLabel>
    <relationshipName>Finance_Requests_Split</relationshipName>
    <type>Lookup</type>
</CustomField>