force-app/main/default/objects/Finance_Request__c/recordTypes/Bucket_Fund.recordType-meta.xml
<RecordType>
    <fullName>Bucket_Fund</fullName>
    <active>true</active>
    <label>Bucket Fund</label>
</RecordType>