force-app/main/default/objects/Finance_Request__c/recordTypes/Reallocation.recordType-meta.xml
<RecordType>
    <fullName>Reallocation</fullName>
    <active>true</active>
    <label>Reallocation</label>
</RecordType>