force-app/main/default/objects/Finance_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Status__c</columns>
    <columns>Finance_Request_Report__c</columns>
    <columns>Submitted_By__c</columns>
    <columns>Submitted_Date__c</columns>
    <columns>Account__c</columns>
    <columns>Split_Account__c</columns>
    <columns>Finance_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>